@@ -44,7 +44,6 @@ import prerna.sablecc2.om.PixelDataType;
 import prerna.sablecc2.om.ReactorKeysEnum;
 import prerna.sablecc2.om.nounmeta.NounMetadata;
 import prerna.usertracking.UserTrackingUtils;
-import prerna.util.Constants;
 import prerna.util.UploadUtilities;
 import prerna.util.Utility;
 
@@ -80,12 +79,11 @@ public class DeleteWorkspaceReactor extends AbstractReactor {
 				IProject project = Utility.getProject(workspaceId);
 				deleteProject(project);
 				if (ClusterUtil.IS_CLUSTER) {
-					Thread deleteThread = new Thread(new DeleteProjectRunner(workspaceId));
-					deleteThread.start();
+					Thread.ofVirtual().start(new DeleteProjectRunner(workspaceId));
 				}
 			}
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to delete workspace '{}'.", workspaceId, e);
 			return getError("Error during workspace delete: " + e.getMessage());
 		}
 		return new NounMetadata(true, PixelDataType.BOOLEAN);
@@ -109,7 +107,7 @@ public class DeleteWorkspaceReactor extends AbstractReactor {
 		try {
 			project.delete();
 		} catch (IOException e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to delete workspace project files for project '{}'.", projectId, e);
 		}
 
 		return true;
